# blobs

./: .bazelrc  .dockerignore  .gitignore  Cargo.toml  README.md  WORKSPACE.bazel  cargo-bazel-lock.json  docker-compose.yml  go.work  go.work.sum  recipe.json  testnet.toml  zombienet.sh
.cargo/: config.toml
.github/workflows/: ci.yml
adapters/rollkit/: go.mod  go.sum  sugondat.go
adapters/sovereign/: Cargo.toml  README.md
adapters/sovereign/src/: service.rs  spec.rs  verifier.rs
adapters/sovereign/src/service/: client.rs
adapters/sovereign/src/types/: blob.rs  block.rs  hash.rs  header.rs  mod.rs
ci/: README.md  demo-sov.Dockerfile  polkadot.Dockerfile  sugondat-node.Dockerfile
demo/const-rollup-config/: Cargo.toml
demo/demo-rollup/: Cargo.toml
demo/demo-rollup/src/: lib.rs
demo/demo-rollup/stf/: Cargo.toml
demo/rollkit/: go.mod  go.sum  init-local.sh  readme.md  restart-local.sh
demo/rollkit/app/: app.go  app_config.go  encoding.go  sim_bench_test.go  sim_test.go  simulation_test.go
demo/rollkit/docker/: Dockerfile
demo/rollkit/sugondat/: sugondat.go
demo/sovereign/: .dockerignore  Cargo.toml
demo/sovereign/demo-rollup/: Cargo.toml  Makefile  rollup_config.toml  test_create_token.sh
demo/sovereign/demo-rollup/provers/risc0/: Cargo.toml  build.rs
demo/sovereign/demo-rollup/provers/risc0/guest-ikura/: Cargo.toml
demo/sovereign/demo-rollup/provers/risc0/guest-sugondat/: Cargo.toml
demo/sovereign/demo-rollup/src/: ikura_rollup.rs  lib.rs  main.rs  sugondat_rollup.rs
demo/sovereign/demo-rollup/src/sov-cli/: main.rs
demo/sovereign/docker/: Dockerfile  rollup_config.docker.toml  test.sh
demo/sovereign/simple-nft-module/: Cargo.toml
docker/: docker-compose.tests.yml  docker-compose.yml  gha-runner.Dockerfile  risczero.Dockerfile
docs-site/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: intro.md
docs-site/docs/node-operators/: getting-started.md  index.md
docs-site/docs/protocol/: data-availability.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.js
e2e_tests/: Cargo.toml  e2e_test.sh  expanded_metadata.rs  inject.py  kusama.yml  kusama_injected.yml  kusama_metadata.scale  statefile  wasmfile
e2e_tests/src/: main.rs
ikura/chain/: Dockerfile
ikura/chain/node/: Cargo.toml
ikura/chain/node/src/: cli.rs  command.rs  proposer.rs  rpc.rs  service.rs
ikura/chain/node/src/chain_spec/: mod.rs
ikura/chain/node/src/chain_spec/res/: gondatsu.json
ikura/chain/node/src/command/: export_genesis_metadata.rs
ikura/chain/primitives/: Cargo.toml
ikura/nmt/: Cargo.toml
ikura/nmt/src/: lib.rs  ns.rs  root.rs  tests.rs
ikura/serde-util/: Cargo.toml
ikura/shim/: Cargo.toml  Dockerfile  build.rs
ikura/shim/common/rollkit/: Cargo.toml
ikura/shim/common/rollkit/src/: lib.rs
ikura/shim/common/sovereign/: Cargo.toml
ikura/shim/common/sovereign/src/: lib.rs
ikura/shim/proto/: da.proto
ikura/shim/src/: cli.rs  main.rs
ikura/shim/src/cmd/: mod.rs  serve.rs
ikura/shim/src/cmd/query/: blob.rs  block.rs  mod.rs  submit.rs
ikura/shim/src/dock/: mod.rs  rollkit.rs  rpc_error.rs  sovereign.rs
ikura/shim/src/ikura_rpc/: conn.rs  mod.rs
ikura/subxt-autogen/: Cargo.toml  README.md
ikura/subxt-autogen/src/: gen.rs  lib.rs
sovereign-sdk/adapters/celestia/: Cargo.toml
subxt/: Cargo.toml
sugondat-chain/: CODEOWNERS  Cargo.toml  Containerfile  Dockerfile
sugondat-chain/dynamic-fee-adjustment/: Cargo.toml
sugondat-chain/dynamic-fee-adjustment/src/: lib.rs
sugondat-chain/node/: Cargo.toml
sugondat-chain/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  proposer.rs  rpc.rs  service.rs
sugondat-chain/node/src/chain_spec/: mod.rs
sugondat-chain/node/src/chain_spec/res/: blobs_kusama.json
sugondat-chain/pallets/blobs/: BUILD.bazel  Cargo.toml
sugondat-chain/pallets/blobs/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
sugondat-chain/primitives/: BUILD.bazel  Cargo.toml
sugondat-chain/primitives/src/: lib.rs
sugondat-chain/runtime/: Cargo.toml
sugondat-chain/runtime/src/: lib.rs  xcm_config.rs
sugondat-da-adapter/: Cargo.toml
sugondat-da-adapter/src/: lib.rs  service.rs  spec.rs  verifier.rs
sugondat-da-adapter/src/service/: client.rs
sugondat-da-adapter/src/types/: address.rs  blob.rs  block.rs  hash.rs  header.rs
sugondat-nmt/: BUILD.bazel  Cargo.toml
sugondat-nmt/src/: blob_metadata.rs  leaf.rs  lib.rs  ns.rs  ns_proof.rs  root.rs  tests.rs  tree.rs
sugondat-serde-util/: BUILD.bazel
sugondat-serde-util/src/: lib.rs
sugondat-shim/: BUILD.bazel  Cargo.toml
sugondat-shim/common/rollkit/: BUILD.bazel  Cargo.toml
sugondat-shim/common/rollkit/src/: lib.rs
sugondat-shim/common/sovereign/: BUILD.bazel  Cargo.toml
sugondat-shim/common/sovereign/src/: lib.rs
sugondat-shim/src/: cli.rs  key.rs  main.rs  serve.rs  sugondat_rpc.rs
sugondat-shim/src/adapters/: sovereign.rs
sugondat-shim/src/cmd/: mod.rs  serve.rs
sugondat-shim/src/cmd/query/: block.rs  mod.rs  submit.rs
sugondat-shim/src/dock/: mod.rs  rollkit.rs  sovereign.rs
sugondat-shim/src/sugondat_rpc/: conn.rs  mod.rs
sugondat-submit-blob/: Cargo.toml
sugondat-submit-blob/src/: main.rs
sugondat-subxt/: BUILD.bazel  Cargo.toml  README.md  gen.sh
sugondat-subxt/src/: gen.rs  lib.rs
sugondat/chain/: Dockerfile
sugondat/nmt/: Cargo.toml
sugondat/nmt/src/: lib.rs  ns.rs  tree.rs
sugondat/serde-util/: Cargo.toml
sugondat/shim/: Cargo.toml  Dockerfile
sugondat/shim/common/rollkit/: Cargo.toml
sugondat/shim/common/sovereign/: Cargo.toml
sugondat/shim/common/sovereign/src/: lib.rs
sugondat/shim/src/: cli.rs
sugondat/shim/src/cmd/: serve.rs
sugondat/shim/src/cmd/query/: blob.rs  block.rs  mod.rs  submit.rs
sugondat/shim/src/dock/: mod.rs  rollkit.rs  rpc_error.rs  sovereign.rs
sugondat/shim/src/sugondat_rpc/: conn.rs  mod.rs
sugondat/subxt-autogen/: Cargo.toml
sugondat/subxt-autogen/src/: gen.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: build.rs  cli.rs  logging.rs  main.rs  shim.rs  sovereign.rs  zombienet.rs
(+144 files in other folders)
