[profile.release]
panic = "unwind"
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[workspace]
resolver = "2"
members = [
    "sugondat-chain/node",
    "sugondat-chain/pallets/blobs",
    "sugondat-chain/runtimes/sugondat-kusama",
    "sugondat-chain/runtimes/test",
    "sugondat-chain/primitives",
    "adapters/sovereign",
    "sugondat-nmt",
    "sugondat-serde-util",
    "sugondat-shim",
    "sugondat-shim/common/rollkit",
    "sugondat-shim/common/sovereign",
    "sugondat-subxt"
]
