[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.32.1"
subxt-signer = "0.32.1"
tokio = { version = "1.34.0", features = ["macros", "time", "rt-multi-thread"] }
