[package]
name = "sugondat-da-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = "3.6.3"
# The only required dependency for a DA adapter is the Sovereign SDK...
sov-rollup-interface =  { path = "../sovereign-sdk/rollup-interface" }

sugondat-subxt = { path = "../sugondat-subxt", optional = true }
subxt = { path = "../subxt/subxt", optional = true }
sp-keyring = { git = "https://github.com/paritytech/substrate", optional = true, default-features = false, branch = "polkadot-v0.9.43" }
tracing = "0.1.37"
serde = { version = "1", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
# Derive borsh for instant implementations of the Sovereign SDK's encode/decode traits
# borsh = { version = "0.10.3", features = ["bytes"] }

# While not used by this crate, we need bytes to include serde.
bytes = { version = "1", features = ["serde"] }

sha2 = { version = "0.10.6", default-features = false }
sugondat-nmt = { path = "../sugondat-nmt", default-features = false }

anyhow = "1.0.68"
tokio = { version = "1", optional = true }

[features]
default = ["native"]
native = ["sugondat-nmt/serde", "sugondat-nmt/native", "dep:sugondat-subxt", "dep:subxt", "dep:sp-keyring", "dep:tokio"]
verifier = ["sugondat-nmt/serde"]
