load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "sugondat-serde-util",
    srcs = glob([
        "src/**/*.rs",
    ]),
    deps = all_crate_deps(),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)

# TODO: tests
