[package]
name = "sugondat-shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive", "env", "wrap_help"] }
futures = "0.3.29"
jsonrpsee = { version = "0.20.3", features = ["ws-client", "server"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "net"] }
async-trait = "0.1.74"
subxt = { version = "0.32.1" }
subxt-signer = {version = "0.32.1", features = ["subxt"] }
sha2 = "0.10.8"

sugondat-nmt = { path = "../sugondat-nmt", features = ["serde"] }
sugondat-subxt = { path = "../sugondat-subxt" }
sugondat-shim-common-sovereign = { path = "common/sovereign", features = ["server"] }
