[package]
name = "sugondat-submit-blob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sugondat-da-adapter = { path = "../adapters/sovereign" }
const-rollup-config = { path = "../demo/sovereign/const-rollup-config" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", features = [
    "native",
], rev = "6058b31" }
tokio = { version = "1", features = ["full"] }
