[package]
name = "sugondat-subxt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = { version = "0.32.1", features = ["jsonrpsee"] }
parity-scale-codec = "3.6.3"

anyhow = "1.0.68"
