[package]
name = "ikura-da-adapter"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { workspace = true }
# The only required dependency for a DA adapter is the Sovereign SDK...
sov-rollup-interface = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
hex = { workspace = true, features = ["serde"] }
# Derive borsh for instant implementations of the Sovereign SDK's encode/decode traits
borsh = { workspace = true, features = ["bytes"] }

# While not used by this crate, we need bytes to include serde.
bytes = { workspace = true, features = ["serde"] }

sha2 = { workspace = true }
ikura-nmt = { workspace = true }
jsonrpsee = { workspace = true, optional = true, features = ["ws-client"] }
tokio = { workspace = true, optional = true }
ikura-shim-common-sovereign = { workspace = true, optional = true, features = ["client"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
digest = { workspace = true }

[features]
default = ["native"]
native = [
    "sov-rollup-interface/native",
    "ikura-nmt/serde",
    "ikura-nmt/native",
    "dep:tokio",
    "dep:jsonrpsee",
    "dep:ikura-shim-common-sovereign",
]
verifier = ["ikura-nmt/serde"]
