[package]
name = "ikura-nmt"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { workspace = true }
nmt-rs = { workspace = true }
serde = { workspace = true, optional = true }
ikura-serde-util = { workspace = true, optional = true }


[features]
default = ["native"]
native = []
serde = ["dep:serde", "dep:ikura-serde-util", "nmt-rs/serde"]
