[package]
name = "ikura-shim"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ikura-nmt = { workspace = true, default-features = true, features = ["serde"] }
ikura-serde-util = { workspace = true }
ikura-subxt = { workspace = true }
ikura-primitives = { workspace = true, default-features = true }
ikura-shim-common-sovereign = { workspace = true, default-features = true, features = ["server"] }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["ws-client", "server"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subxt = { workspace = true }
subxt-signer = { workspace = true, features = ["subxt"] }
sha2 = { workspace = true, default-features = true }
url = { workspace = true }
hex = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
temp-dir = { workspace = true }
