[package]
name = "dynamic-fee-adjustment"
version = "0.1.0"
authors = ["Anonymous"]
description = "Fee Adjustment based on block length and weight"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thrumdev/blobs"
edition = "2021"


[dependencies]
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.4.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.4.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.4.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.4.0" }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.4.0"}
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.4.0"}

[features]
default = [ "std" ]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-weights/std",
    "sp-arithmetic/std",
    "pallet-transaction-payment/std",
]

#runtime-benchmarks = ["sp-runtime/runtime-benchmarks",]
#
#try-runtime = [
#    "pallet-transaction-payment/try-runtime",
#    "sp-runtime/try-runtime"
#]
